fix too high headings

--- a/jekyll/assets/css/main.scss
+++ b/jekyll/assets/css/main.scss
@@ -547,7 +547,7 @@ span.icon>.fa {
 }
 
 .page-title {
-  padding-top: 40px; // This needs to be a padding, else the whole menu is vertically offset
+  padding-top: 70pt; // This needs to be a padding, else the whole menu is vertically offset
 }
 
 .post-date {
